# capcut-mate

./: .gitignore  DEPENDENCIES.md  Dockerfile  MCP_文档_中文.md  Makefile  NOTICE  README-zh.md  README.md  README.zh.md  capcut_server.py  check_dependencies.py  config.json  config.py  docker-compose-local.yaml  docker-compose.yaml  exceptions.py  install_ffmpeg.sh  main.py  mcp_config.json  myproject.toml  openapi.yaml  pyproject.toml  requirements.txt  schemas.py  test_objs_to_str_list.py  verify_migration.py
config/: sticker.json
desktop-client/: main.js  package.json
docs/: ADD_VIDEOS.html  API接口文档.md  README.md  add_audio.md  add_audios.md  add_audios.zh.md  add_captions.md  add_effects.md  add_image.md  add_images.md  add_images.zh.md  add_keyframes.md  add_masks.md  add_sticker.md  add_sticker.zh.md  add_text.md  add_text_style.md  add_video.md  add_videos.md  add_videos.zh.md  audio_infos.md  audio_infos.zh.md  audio_timelines.md  audio_timelines.zh.md  caption_infos.md  caption_infos.zh.md  create_draft.md  create_draft.zh.md  easy_create_material.md  effect_infos.md  effect_infos.zh.md  gen_video.md  gen_video.zh.md  gen_video_status.md  gen_video_status.zh.md  get_audio_duration.md  get_draft.md  get_draft.zh.md  get_image_animations.md  get_mask_types.md  (+22 more)
schemas/: __init__.py  add_audio.py  add_effect.py  add_image.py  add_keyframe.py  add_sticker.py  add_subtitle.py  add_text.py  add_video.py  create_draft.py  generate_draft_url.py  query_draft_status.py  query_script.py  save_draft.py
tests/: test_add_audios.py  test_add_images_upstream_merge.py  test_add_videos_concurrent.py  test_deferred_delete.py  test_draft_download_failure_kind.py  test_draft_downloader_remote_materials.py  test_draft_lock_all_apis.py  test_draft_service.py  test_export_rename_retry.py  test_jianying_controller_com.py  test_jianying_export_cleanup.py  test_keyframe_value.py  test_keyword_font_size.py  test_media_path_use_url.py  test_middleware.py  test_param_pass.py  test_srt_infos.py  (+3 more)
(+114 files in other folders)
