[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capcut-mate"
version = "1.0.0"
description = "Open source CapCut API tool with MCP support"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "CapCut Mate Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "opencv-python>=4.6.0",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "imageio>=2.31.0",
    "psutil>=5.9.0",
    "flask>=2.3.0",
    "oss2>=2.17.0",
    "json5>=0.9.0",
    "flasgger>=0.9.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "websockets>=11.0",
    "jsonrpc-base>=2.2.0",
    "jsonrpc-websocket>=3.1.0",
    "jsonrpc-async>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/sun-guannan/CapCutAPI"
Repository = "https://github.com/sun-guannan/CapCutAPI.git"
Issues = "https://github.com/sun-guannan/CapCutAPI/issues"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["pyJianYingDraft", "settings"]