[project]
name = "capcut-mate"
version = "1.0.0"
description = "CapCut Mate API Service"
authors = [
    { name = "Hommy", email = "taohongmin51@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.100.0",
    "pymediainfo>=7.0.1",
    "pywin32>=311",
    "requests>=2.32.5",
    "uiautomation>=2.0.29",
    "uvicorn[standard]>=0.35.0",
    "cos-python-sdk-v5>=1.9.38",
]
